--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: my-serverless-app
+service: serverless-simple-http-endpoint
 # app and org for use with dashboard.serverless.com
 app: app-2
 org: ahlemzebda
@@ -22,7 +22,7 @@ org: ahlemzebda
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs8.10
 
 # you can overwrite defaults here
 #  stage: dev
@@ -59,14 +59,14 @@ provider:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: handler.endpoint
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
+    events:
+      - http:
+          path: ping
+          method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
